add patch to fix xml

--- a/org.strawberrymusicplayer.strawberry.yaml
+++ b/org.strawberrymusicplayer.strawberry.yaml
@@ -111,3 +111,5 @@ modules:
           url: https://api.github.com/repos/strawberrymusicplayer/strawberry/releases/latest
           version-query: .tag_name 
           url-query:  .assets[] | select(.name=="strawberry-"+ $version +".tar.xz") | .browser_download_url
+      - type: patch
+        path: patches/0001-add-type-to-appdata.xml.patch
