Add updated metadata tags to show current release version

--- a/org.strawberrymusicplayer.strawberry.yaml
+++ b/org.strawberrymusicplayer.strawberry.yaml
@@ -109,6 +109,8 @@ modules:
           version-query: .tag_name
           url-query: .assets[] | select(.name=="strawberry-"+ $version +".tar.xz")
             | .browser_download_url
+      - type: patch
+        path: update-appdata.patch
       - type: script
         dest-filename: start-strawberry.sh
         commands:
