--- a/org.strawberrymusicplayer.strawberry.yaml
+++ b/org.strawberrymusicplayer.strawberry.yaml
@@ -63,6 +63,7 @@ modules:
           project-id: 286
           url-template: https://github.com/acoustid/chromaprint/releases/download/v$version/chromaprint-$version.tar.gz
   - name: protobuf
+    buildsystem: cmake-ninja
     cleanup:
       - /bin/protoc
     sources:
