--- a/org.strawberrymusicplayer.strawberry.yaml
+++ b/org.strawberrymusicplayer.strawberry.yaml
@@ -38,7 +38,7 @@ modules:
   - name: boost
     buildsystem: simple
     build-commands:
-      - ./bootstrap.sh  --prefix="${FLATPAK_DEST}"
+      - ./bootstrap.sh  --prefix="${FLATPAK_DEST}"  --with-libraries=headers
       - ./b2 --without-mpi --without-graph_parallel -j ${FLATPAK_BUILDER_N_JOBS}
       - ./b2 --without-mpi --without-graph_parallel -j ${FLATPAK_BUILDER_N_JOBS} headers
       - ./b2 --without-mpi --without-graph_parallel install
