--- a/org.strawberrymusicplayer.strawberry.yaml
+++ b/org.strawberrymusicplayer.strawberry.yaml
@@ -38,10 +38,10 @@ modules:
   - name: boost
     buildsystem: simple
     build-commands:
-      - ./bootstrap.sh  --prefix="${FLATPAK_DEST}" --with-libraries=headers
+      - ./bootstrap.sh  --prefix="${FLATPAK_DEST}"
       - ./b2 --without-mpi --without-graph_parallel -j ${FLATPAK_BUILDER_N_JOBS}
       - ./b2 --without-mpi --without-graph_parallel -j ${FLATPAK_BUILDER_N_JOBS} headers
-      - ./b2 --without-mpi --without-graph_parallel install --layout=system
+      - ./b2 --without-mpi --without-graph_parallel
     sources:
       - type: archive
         url: https://boostorg.jfrog.io/artifactory/main/release/1.85.0/source/boost_1_85_0.tar.gz
