--- a/org.strawberrymusicplayer.strawberry.yaml
+++ b/org.strawberrymusicplayer.strawberry.yaml
@@ -107,11 +107,8 @@ modules:
   - name: taglib
     buildsystem: cmake-ninja
     config-opts:
-      - -DCMAKE_BUILD_TYPE=Release
+    "config-opts":
       - -DBUILD_SHARED_LIBS=ON
-      - -DCMAKE_POSITION_INDEPENDENT_CODE=ON
-      - -DWITH_MP4=ON
-      - -DWITH_ASF=ON
     cleanup:
       - /bin
     sources:
