--- a/org.strawberrymusicplayer.strawberry.yaml
+++ b/org.strawberrymusicplayer.strawberry.yaml
@@ -48,11 +48,11 @@ modules:
     sources:
       - type: git
         url: https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs.git/
-        tag: 0.14.0
-        commit: 8511071f6518e6df5dcadf8b113a43addd7ea1fe
+        tag: 0.14.1
+        commit: 126f022fe119dd79ad70290b08d303fddc441a16
         x-checker-data:
           type: git
-          tag-pattern: ^v([\d.]+)$
+          tag-pattern: ^([\d.]+)$
       - full-gst-plugins-rs-sources.json
     build-options:
       append-path: /usr/lib/sdk/rust-stable/bin
